--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -4,6 +4,36 @@ html {
 .orbitron {
     font-family: "Orbitron", sans-serif;
     font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+  }
+  .rhodium-libre-regular {
+    font-family: "Rhodium Libre", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .league-gothic- {
+    font-family: "League Gothic", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+  }
+  .epilogue- {
+    font-family: "Epilogue", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .orbitron- {
+    font-family: "Orbitron", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .fjalla-one-regular {
+    font-family: "Fjalla One", sans-serif;
     font-weight: 400;
     font-style: normal;
   }
